# Android-Rust-WebAssembly

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: video.css  video.html  video.js  videos.html
app/src/main/front_end/Video/: Cargo.toml  配置.txt
app/src/main/front_end/Video/src/: listener.rs  utils.rs
app/src/main/frontend/: Cargo.toml  cmd.txt  配置.txt
app/src/main/frontend/src/: elements.rs  lib.rs  utils.rs
app/src/main/frontend/src/video/: handler.rs  mod.rs  seek.rs  utils.rs
app/src/main/frontend/src/videos/: add_video_to_favorites.rs  data.rs  dom.rs  elements.rs  fetch_match_videos.rs  mod.rs  query_input.rs  render_video_list.rs  search.rs  utils.rs
app/src/main/java/psycho/euphoria/plane/: CustomWebChromeClient.java  CustomWebViewClient.java  Database.java  MainActivity.java  PublicFileProvider.java  ServerService.java  WebAppInterface.java
app/src/main/res/values/: strings.xml
app/src/main/rust/: Cargo.toml  cmd.txt
app/src/main/rust/src/: format.js  lib.rs  server.rs
app/src/main/rust/src/data/: cache.rs  file_item.rs  mod.rs  server.rs  video.rs
app/src/main/rust/src/db/: delete_video.rs  hidden_video.rs  list_videos.rs  mod.rs  modify_video_table.rs  query_cookie.rs  search_videos.rs  update_video.rs  update_video_duration.rs  update_video_file.rs  update_video_uri.rs  update_video_views.rs  video.rs
app/src/main/rust/src/extractor/: config.rs  erotic_mv.rs  five_two_ck.rs  jable.rs  ma_hua.rs  mod.rs  nine_porn.rs  rust.code-workspace  twitter.rs  xvideos.rs
app/src/main/rust/src/handler/: db.rs  file.rs  files.rs  hidden_video.rs  html.rs  mod.rs  not_found.rs  subtitle.rs  video.rs  xvideos.rs
app/src/main/rust/src/utils/: asset.rs  date.rs  file.rs  java.rs  mod.rs  net.rs
