[package]
edition = "2021"
name = "frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
once_cell = "1.17.1"
send_wrapper = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
urlencoding = "2.1.2"
[dependencies.web-sys]
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  "Window",
  "Document",
  "HtmlElement",
  "Location",
  "Event",
  "KeyboardEvent",
  "HtmlTextAreaElement",
  "Navigator",
  "Storage",
  "HtmlVideoElement",
  "CssStyleDeclaration",
  "HtmlMediaElement",
  "TimeRanges",
  "MouseEvent",
  "DomRect"
]
