[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/jni-rs/jni-rs
jni = { version = "0.20.0" }
ndk = { version = "0.7.0", features = ["api-level-30", "audio"] }
ndk-sys = "0.4.1"
log = "*"
log-panics = "*"
android_logger = "*"

rocket = { version = "=0.5.0-rc.3", features = ["json"] }

tree_magic = "0.2.3"
rand = "0.8.5"
futures = { version = "0.3" }
range_header = "0.2"
